--- a/views/login.html
+++ b/views/login.html
@@ -2,12 +2,13 @@
 <html>
     
 <head>
-    <title>User Login and Sessions</title>
+    <title>QuoteSharer</title>
     <link rel="stylesheet" type="text/css" href="/stylesheets/style.css" />
 </head>
         
 <body>  
     <div class="form-container">
+        <h3>You must be logged in to view site content</h3>
         <p class="form-header">Login</p>
         <form method="POST" action="/login">
             <label>Username:</label>
