--- a/views/signup.html
+++ b/views/signup.html
@@ -2,7 +2,7 @@
 <html>
     
 <head>
-    <title>User Login and Sessions</title>
+    <title>QuoteSharer</title>
     <link rel="stylesheet" type="text/css" href="/stylesheets/style.css" />
 </head>
         
@@ -14,8 +14,6 @@
             <input type="text" id="username" name="username"><br>
             <label>Password:</label>
             <input type="password" id="password" name="password"><br>
-            <label>Email:</label>
-            <input type="email" id="email" name="email"><br>
             <input type="submit" id="register" value="Register">
         </form>
     </div>
